// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileUserPageUI > should render ProfileUserPageUI for Google auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary disabled"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                disabled=""
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              disabled=""
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              disabled=""
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            disabled=""
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ProfileUserPageUI > should render ProfileUserPageUI for Local auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            disabled=""
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
      <div
        class="pageDivider"
      />
      <div
        class="typography subtitle full"
      >
        Upgrade Your Password
      </div>
      <div
        class="typography text medium"
      >
        Enhance your account security with a fresh password—verify your current one, choose a new one, and confirm to complete the update.
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-oldPassword-textfield"
              id="oldPassword"
              maxlength="128"
              minlength="8"
              name="oldPassword"
              placeholder="Old Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-newPassword-textfield"
              id="newPassword"
              maxlength="128"
              minlength="8"
              name="newPassword"
              placeholder="New Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-confirmPassword-textfield"
              id="confirmPassword"
              maxlength="128"
              minlength="8"
              name="confirmPassword"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-password-button-button"
            disabled=""
            id="update-password-button"
            name="update-password-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-lock "
              data-icon="lock"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"
                fill="currentColor"
              />
            </svg>
            <span>
              Lock It Down!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ProfileUserPageUI > should render ProfileUserPageUI with prepopulated values for Google auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary disabled"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                disabled=""
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value="user@example.com"
              />
            </div>
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              disabled=""
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value="John"
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              disabled=""
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value="Appleseed"
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value="FrostyBear"
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ProfileUserPageUI > should render ProfileUserPageUI with prepopulated values for Local auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value="user@example.com"
              />
            </div>
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value="John"
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value="Appleseed"
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value="FrostyBear"
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
      <div
        class="pageDivider"
      />
      <div
        class="typography subtitle full"
      >
        Upgrade Your Password
      </div>
      <div
        class="typography text medium"
      >
        Enhance your account security with a fresh password—verify your current one, choose a new one, and confirm to complete the update.
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-oldPassword-textfield"
              id="oldPassword"
              maxlength="128"
              minlength="8"
              name="oldPassword"
              placeholder="Old Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-newPassword-textfield"
              id="newPassword"
              maxlength="128"
              minlength="8"
              name="newPassword"
              placeholder="New Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-confirmPassword-textfield"
              id="confirmPassword"
              maxlength="128"
              minlength="8"
              name="confirmPassword"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-password-button-button"
            disabled=""
            id="update-password-button"
            name="update-password-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-lock "
              data-icon="lock"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"
                fill="currentColor"
              />
            </svg>
            <span>
              Lock It Down!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ProfileUserPageUI > should render ProfileUserPageUI with unverified email for Google auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary disabled"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                disabled=""
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value="user@example.com"
              />
            </div>
          </div>
          <span
            class="hint"
          >
            Whoops, your email
             
            <i>
              <b>
                user@example.com
              </b>
            </i>
             
            hasn’t RSVP’d to verification yet!
             
            <button
              class="buttonLink"
              type="button"
            >
              Zap me a fresh verification link!
            </button>
          </span>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              disabled=""
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value="John"
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              disabled=""
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value="Appleseed"
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value="FrostyBear"
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ProfileUserPageUI > should render ProfileUserPageUI with unverified email for Local auth provider 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth startAlign"
    >
      <div
        class="legacyInfoBox"
      >
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://quiz.emilhornlund.com"
        >
          quiz.emilhornlund.com
        </a>
         one last time, and we’ll magically teleport everything over to 
        <span>
          klurigo.com
        </span>
        . Ready to blast off your data?
      </div>
      <div
        class="typography subtitle full"
      >
        Shape your quiz identity
      </div>
      <div
        class="typography text medium"
      >
        Update your personal details to keep your profile up to date. Your information helps personalize your quiz experience and lets others recognize you during games.
      </div>
      <form
        class="form"
      >
        <div
          class="formField"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-email-textfield"
                id="email"
                maxlength="128"
                minlength="6"
                name="email"
                placeholder="Email"
                type="text"
                value="user@example.com"
              />
            </div>
          </div>
          <span
            class="hint"
          >
            Whoops, your email
             
            <i>
              <b>
                user@example.com
              </b>
            </i>
             
            hasn’t RSVP’d to verification yet!
             
            <button
              class="buttonLink"
              type="button"
            >
              Zap me a fresh verification link!
            </button>
          </span>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-givenName-textfield"
              id="givenName"
              maxlength="64"
              minlength="1"
              name="givenName"
              placeholder="Given Name"
              type="text"
              value="John"
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-familyName-textfield"
              id="familyName"
              maxlength="64"
              minlength="1"
              name="familyName"
              placeholder="Family Name"
              type="text"
              value="Appleseed"
            />
          </div>
        </div>
        <div
          class="nicknameTextFieldContainer"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindPrimary"
            >
              <input
                class="textfield"
                data-testid="test-default-nickname-textfield-textfield"
                id="default-nickname-textfield"
                maxlength="20"
                minlength="2"
                name="default-nickname-textfield"
                placeholder="Default Nickname"
                type="text"
                value="FrostyBear"
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary"
          >
            <button
              data-testid="test-shuffle-nickname-button-button"
              id="shuffle-nickname-button"
              name="shuffle-nickname-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrows-rotate "
                data-icon="arrows-rotate"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-user-button-button"
            id="update-user-button"
            name="update-user-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-floppy-disk "
              data-icon="floppy-disk"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm0 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32L96 224c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                fill="currentColor"
              />
            </svg>
            <span>
              Save!
            </span>
          </button>
        </div>
      </form>
      <div
        class="pageDivider"
      />
      <div
        class="typography subtitle full"
      >
        Upgrade Your Password
      </div>
      <div
        class="typography text medium"
      >
        Enhance your account security with a fresh password—verify your current one, choose a new one, and confirm to complete the update.
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-oldPassword-textfield"
              id="oldPassword"
              maxlength="128"
              minlength="8"
              name="oldPassword"
              placeholder="Old Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-newPassword-textfield"
              id="newPassword"
              maxlength="128"
              minlength="8"
              name="newPassword"
              placeholder="New Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-confirmPassword-textfield"
              id="confirmPassword"
              maxlength="128"
              minlength="8"
              name="confirmPassword"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-update-password-button-button"
            disabled=""
            id="update-password-button"
            name="update-password-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-lock "
              data-icon="lock"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"
                fill="currentColor"
              />
            </svg>
            <span>
              Lock It Down!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
